# routes/index.js
@@ -1,16 +1,14 @@
-const express = require('express');
-const router = express.Router();
+const router = require('express').Router();
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger.json');
 
-router.use('/contacts', require('./contacts'));
+if (process.env.RENDER_EXTERNAL_URL) {
+    swaggerDocument.host = process.env.RENDER_EXTERNAL_URL.replace(/^https?:\/\//, '');
+    swaggerDocument.schemes = ['https'];
+} else {
+    swaggerDocument.host = 'localhost:8080';
+    swaggerDocument.schemes = ['http'];
+}
 
-// Ruta interactiva de Swagger UI
-router.use('/api-docs', swaggerUi.serve);
-router.get('/api-docs', swaggerUi.setup(swaggerDocument));
 
-router.get('/', (req, res) => {
-    res.send('Contacts API Working on Render 🚀');
-});
-
-module.exports = router;
+router.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
